@@ -173,6 +173,7 @@ protected:
   void ConfigureSystemMenu();
   void OnSysAlwaysOnTop();
   afx_msg void OnSysCommand( UINT nID, LPARAM lParam );
+  LRESULT OnHotKey(WPARAM wParam, LPARAM lParam);
   enum STATE {LOCKED, UNLOCKED};
   void UpdateSystemTray(STATE s);
   LRESULT OnTrayNotification(WPARAM wParam, LPARAM lParam);
